Closed Bug 1177024 Opened 11 years ago Closed 11 years ago

Compiler errors in GTK3 build with clang

Categories

(Core :: Widget: Gtk, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla41
Tracking Status
firefox41 --- fixed

People

(Reporter: botond, Assigned: botond)

Details

Attachments

(1 file)

I did a GTK3 build of trunk with clang as the compiler, and got some warnings-as-errors. Will post a patch that fixes them.
Bug 1177024 - Fix clang warnings-as-errors in GTK3 build. r=karlt
Attachment #8625650 - Flags: review?(karlt)
Assignee: nobody → botond
Comment on attachment 8625650 [details] MozReview Request: Bug 1177024 - Fix clang warnings-as-errors in GTK3 build. r=karlt https://reviewboard.mozilla.org/r/11901/#review10433 Ship It! ::: widget/gtk/nsWindow.cpp:1950 (Diff revision 1) > #else > haveEvent = false; Please remove this now unnecessary #else block.
Attachment #8625650 - Flags: review?(karlt) → review+
Thanks! Addressed comment and landed.
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla41
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: