Bug 1177024 - Fix clang warnings-as-errors in GTK3 build. r=karlt

--HG--
extra : source : 22ae9b52ec5b25fab359ff32e04072df6412662e